--- a/benchmarks/RemoteBenchmark/Node1/Node1.csproj
+++ b/benchmarks/RemoteBenchmark/Node1/Node1.csproj
@@ -6,10 +6,16 @@
   <ItemGroup>
     <Content Include="runtimeconfig.template.json" />
   </ItemGroup>
+  
+   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.2" />
+  </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\Proto.Actor\Proto.Actor.csproj" />
     <ProjectReference Include="..\..\..\src\Proto.Mailbox\Proto.Mailbox.csproj" />
-    <ProjectReference Include="..\..\..\src\Proto.Remote\Proto.Remote.csproj" />
+    <ProjectReference Include="..\..\..\src\Proto.Remote.Grpc\Proto.Remote.Grpc.csproj" />
     <ProjectReference Include="..\Messages\Messages.csproj" />
   </ItemGroup>
 </Project>
