--- a/benchmarks/RemoteBenchmark/Node1/Node1.csproj
+++ b/benchmarks/RemoteBenchmark/Node1/Node1.csproj
@@ -7,6 +7,9 @@
     <Content Include="runtimeconfig.template.json" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.2" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\..\..\src\Proto.Actor\Proto.Actor.csproj" />
     <ProjectReference Include="..\..\..\src\Proto.Remote\Proto.Remote.csproj" />
     <ProjectReference Include="..\Messages\Messages.csproj" />
