--- a/examples/ClusterHelloWorld/Node2/Node2.csproj
+++ b/examples/ClusterHelloWorld/Node2/Node2.csproj
@@ -14,7 +14,7 @@
     <ProjectReference Include="..\..\..\src\ClusterProviders\Proto.Cluster.SingleRemoteInstance\Proto.Cluster.SingleRemoteInstance.csproj" />
     <ProjectReference Include="..\..\..\src\Proto.Actor\Proto.Actor.csproj" />
     <ProjectReference Include="..\..\..\src\Proto.Cluster\Proto.Cluster.csproj" />
-    <ProjectReference Include="..\..\..\src\Proto.Remote\Proto.Remote.csproj" />
+    <ProjectReference Include="..\..\..\src\Proto.Remote.AspNetCore\Proto.Remote.AspNetCore.csproj" />
     <ProjectReference Include="..\Messages\Messages.csproj" />
   </ItemGroup>
 </Project>
