--- a/tests/Proto.Remote.Tests.Node/Proto.Remote.Tests.Node.csproj
+++ b/tests/Proto.Remote.Tests.Node/Proto.Remote.Tests.Node.csproj
@@ -15,7 +15,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\src\Proto.Actor\Proto.Actor.csproj" />
-        <ProjectReference Include="..\..\src\Proto.Remote\Proto.Remote.csproj" />
+        <ProjectReference Include="..\..\src\Proto.Remote.Grpc\Proto.Remote.Grpc.csproj" />
         <ProjectReference Include="..\Proto.Remote.Tests.Messages\Proto.Remote.Tests.Messages.csproj" />
     </ItemGroup>
   
