--- a/examples/Chat/Client/Client.csproj
+++ b/examples/Chat/Client/Client.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\Proto.Actor\Proto.Actor.csproj" />
-    <ProjectReference Include="..\..\..\src\Proto.Remote\Proto.Remote.csproj" />
+    <ProjectReference Include="..\..\..\src\Proto.Remote.Grpc\Proto.Remote.Grpc.csproj" />
     <ProjectReference Include="..\..\..\src\Tracing\Proto.OpenTracing\Proto.OpenTracing.csproj" />
     <ProjectReference Include="..\Messages\Chat.Messages.csproj" />
   </ItemGroup>
