--- a/examples/ClusterStabilityTest/Node1/TestApp.csproj
+++ b/examples/ClusterStabilityTest/Node1/TestApp.csproj
@@ -10,6 +10,7 @@
     <ProjectReference Include="..\..\..\src\ClusterProviders\Proto.Cluster.Consul\Proto.Cluster.Consul.csproj" />
     <ProjectReference Include="..\..\..\src\Proto.Actor\Proto.Actor.csproj" />
     <ProjectReference Include="..\..\..\src\Proto.Cluster\Proto.Cluster.csproj" />
+    <ProjectReference Include="..\..\..\src\Proto.Cluster.Extensions\Proto.Cluster.Extensions.csproj" />
     <ProjectReference Include="..\..\..\src\Proto.Remote.Grpc\Proto.Remote.Grpc.csproj" />
     <ProjectReference Include="..\..\..\src\Proto.Remote.AspNetCore\Proto.Remote.AspNetCore.csproj" />
     <ProjectReference Include="..\Messages\Messages.csproj" />
