--- a/examples/ClusterHelloWorld/Node1/Node1.csproj
+++ b/examples/ClusterHelloWorld/Node1/Node1.csproj
@@ -9,7 +9,7 @@
     <ProjectReference Include="..\..\..\src\Proto.Actor\Proto.Actor.csproj" />
     <ProjectReference Include="..\..\..\src\Proto.Cluster\Proto.Cluster.csproj" />
     <ProjectReference Include="..\..\..\src\Proto.Cluster.Extensions\Proto.Cluster.Extensions.csproj" />
-    <ProjectReference Include="..\..\..\src\Proto.Remote.AspNetCore\Proto.Remote.AspNetCore.csproj" />
+    <ProjectReference Include="..\..\..\src\Proto.Remote.Grpc\Proto.Remote.Grpc.csproj" />
     <ProjectReference Include="..\Messages\Messages.csproj" />
   </ItemGroup>
   <ItemGroup>
