--- a/examples/ClusterStabilityTestAsp/Worker/appsettings.json
+++ b/examples/ClusterStabilityTestAsp/Worker/appsettings.json
@@ -8,7 +8,9 @@
     "Console": {
       "IncludeScopes": false,
       "LogLevel": {
-        "Default": "Critical"
+        "Default": "Warning",
+        "Microsoft": "Warning",
+        "Proto.EventStream": "Information"
       }
     }
   },
