--- a/src/cluster-playground/ClusterExperiment1/ClusterExperiment1.csproj
+++ b/src/cluster-playground/ClusterExperiment1/ClusterExperiment1.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp5.0</TargetFramework>
+        <TargetFramework>netcoreapp3.1</TargetFramework>
         <OutputType>Exe</OutputType>
         <LangVersion>8</LangVersion>
     </PropertyGroup>
@@ -14,7 +14,7 @@
 
     <ItemGroup>
       <PackageReference Include="Grpc.Tools" Version="2.31.0" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0-preview.7.20364.11" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.7" />
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     </ItemGroup>
 
