--- a/examples/ClusterStabilityTestAsp/Client/appsettings.Development.json
+++ b/examples/ClusterStabilityTestAsp/Client/appsettings.Development.json
@@ -5,6 +5,23 @@
       "System": "Information",
       "Grpc": "Information",
       "Microsoft": "Information"
+    },
+    "Console": {
+      "IncludeScopes": false,
+      "LogLevel": {
+        "Default": "Debug",
+        "Microsoft": "Warning",
+        "Proto.EventStream": "Information"
+      }
     }
-  }
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://+:5001",
+        "Protocols": "Http2"
+      }
+    }
+  },
+  "Proto_Hostname": "localhost"
 }
