--- a/src/cluster-playground/ClusterExperiment1/ClusterExperiment1.csproj
+++ b/src/cluster-playground/ClusterExperiment1/ClusterExperiment1.csproj
@@ -8,7 +8,8 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\experimental\Proto.Cluster.MongoIdentityLookup\Proto.Cluster.MongoIdentityLookup.csproj" />
-      <ProjectReference Include="..\..\Proto.Cluster\Proto.Cluster.csproj" />
+      <ProjectReference Include="..\..\Proto.Cluster.Extensions\Proto.Cluster.Extensions.csproj" />
+      <ProjectReference Include="..\..\Proto.Remote.AspNet\Proto.Remote.AspNet.csproj" />
       <ProjectReference Include="..\Proto.Cluster.Consul\Proto.Cluster.Consul.csproj" />
       <ProjectReference Include="..\..\Proto.Cluster.TestProvider\Proto.Cluster.TestProvider.csproj" />
     </ItemGroup>
