--- a/src/cluster-playground/ClusterStabilityTestAsp/Messages/Messages.csproj
+++ b/src/cluster-playground/ClusterStabilityTestAsp/Messages/Messages.csproj
@@ -8,8 +8,8 @@
     <PackageReference Include="Grpc.Tools" Version="2.31.0" PrivateAssets="All" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\Proto.Actor\Proto.Actor.csproj" />
-    <ProjectReference Include="..\..\..\src\Proto.Cluster\Proto.Cluster.csproj" />
+    <ProjectReference Include="..\..\..\Proto.Actor\Proto.Actor.csproj" />
+    <ProjectReference Include="..\..\..\Proto.Cluster\Proto.Cluster.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Protobuf Include="Protos.proto" GrpcServices="Server" ProtoRoot=".; ..\..\..\src" />
