--- a/src/cluster-playground/ClusterStabilityTestAsp/Worker/appsettings.Development.json
+++ b/src/cluster-playground/ClusterStabilityTestAsp/Worker/appsettings.Development.json
@@ -23,5 +23,13 @@
       }
     }
   },
-  "Proto_Hostname": "localhost"
+  "Proto_Hostname": "localhost",
+  "Seq": {
+    "ServerUrl": "http://localhost:5341",
+    "ApiKey": "1234567890",
+    "MinimumLevel": "Debug",
+    "LevelOverride": {
+      "Microsoft": "Warning"
+    }
+  }
 }
