--- a/src/cluster-playground/ClusterStabilityTestAsp/Worker/appsettings.json
+++ b/src/cluster-playground/ClusterStabilityTestAsp/Worker/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Trace",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     },
@@ -18,6 +18,14 @@
   "Kestrel": {
     "EndpointDefaults": {
       "Protocols": "Http2"
+    }
+  },
+  "Seq": {
+    "ServerUrl": "http://seq",
+    "ApiKey": "1234567890",
+    "MinimumLevel": "Information",
+    "LevelOverride": {
+      "Microsoft": "Warning"
     }
   }
 }
