--- a/src/Proto.Cluster.Extensions/Proto.Cluster.Extensions.csproj
+++ b/src/Proto.Cluster.Extensions/Proto.Cluster.Extensions.csproj
@@ -10,6 +10,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <IsPackable>true</IsPackable>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
 </Project>
