--- a/src/Proto.Remote.Grpc/Proto.Remote.Grpc.csproj
+++ b/src/Proto.Remote.Grpc/Proto.Remote.Grpc.csproj
@@ -2,12 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <IsPackable>true</IsPackable>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Grpc" Version="2.27.0" />
+    <PackageReference Include="Grpc" Version="2.31.0" />
     <PackageReference Include="Grpc.HealthCheck" Version="2.31.0" />
-    <PackageReference Include="Grpc.Tools" Version="2.23.0" PrivateAssets="All" />
   </ItemGroup>
 
   <ItemGroup>
