--- a/src/cluster-playground/ClusterExperiment1/ClusterExperiment1.csproj
+++ b/src/cluster-playground/ClusterExperiment1/ClusterExperiment1.csproj
@@ -7,17 +7,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\experimental\Proto.Cluster.MongoIdentityLookup\Proto.Cluster.MongoIdentityLookup.csproj" />
-      <ProjectReference Include="..\..\Proto.Cluster.Extensions\Proto.Cluster.Extensions.csproj" />
-      <ProjectReference Include="..\..\Proto.Remote.AspNet\Proto.Remote.AspNet.csproj" />
-      <ProjectReference Include="..\Proto.Cluster.Consul\Proto.Cluster.Consul.csproj" />
-      <ProjectReference Include="..\..\Proto.Cluster.TestProvider\Proto.Cluster.TestProvider.csproj" />
+        <ProjectReference Include="..\..\experimental\Proto.Cluster.MongoIdentityLookup\Proto.Cluster.MongoIdentityLookup.csproj"/>
+        <ProjectReference Include="..\..\Proto.Cluster\Proto.Cluster.csproj"/>
+        <ProjectReference Include="..\Proto.Cluster.Consul\Proto.Cluster.Consul.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Grpc.Tools" Version="2.31.0" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.7" />
-      <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+        <PackageReference Include="Grpc.Tools" Version="2.23.0" PrivateAssets="All"/>
+        <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0-preview.7.20364.11"/>
+        <PackageReference Include="Newtonsoft.Json" Version="12.0.3"/>
     </ItemGroup>
 
     <ItemGroup>
