--- a/src/Proto.Remote/Proto.Remote.csproj
+++ b/src/Proto.Remote/Proto.Remote.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Grpc.Core" Version="2.31.0" />
+    <PackageReference Include="Grpc.Core.Api" Version="2.31.0" />
     <PackageReference Include="Grpc.HealthCheck" Version="2.31.0" />
     <PackageReference Include="Grpc.Tools" Version="2.31.0" PrivateAssets="All" />
   </ItemGroup>
