--- a/src/cluster-playground/ClusterStabilityTestAsp/Client/appsettings.Development.json
+++ b/src/cluster-playground/ClusterStabilityTestAsp/Client/appsettings.Development.json
@@ -18,12 +18,12 @@
   "Kestrel": {
     "Endpoints": {
       "Http": {
-        "Url": "http://+:5001",
+        "Url": "http://localhost:5001",
         "Protocols": "Http2"
       }
     }
   },
-  "Proto_Hostname": "localhost",
+  "ConsulHostname": "localhost",
   "Seq": {
     "ServerUrl": "http://localhost:5341",
     "ApiKey": "1234567890",
