--- a/src/cluster-playground/ClusterStabilityTestAsp/Worker/appsettings.Development.json
+++ b/src/cluster-playground/ClusterStabilityTestAsp/Worker/appsettings.Development.json
@@ -23,7 +23,7 @@
       }
     }
   },
-  "Proto_Hostname": "localhost",
+  "ConsulHostname": "localhost",
   "Seq": {
     "ServerUrl": "http://localhost:5341",
     "ApiKey": "1234567890",
