--- a/src/cluster-playground/ClusterStabilityTestAsp/Worker/appsettings.json
+++ b/src/cluster-playground/ClusterStabilityTestAsp/Worker/appsettings.json
@@ -9,9 +9,7 @@
       "IncludeScopes": false,
       "LogLevel": {
         "Default": "Warning",
-        "Microsoft": "Warning",
-        "Proto.EventStream": "Information",
-        "Proto.Remote.HostedRemote": "Debug"
+        "Microsoft": "Warning"
       }
     }
   },
@@ -21,12 +19,12 @@
       "Protocols": "Http2"
     }
   },
+  "ConsulHostname": "consul",
   "Seq": {
     "ServerUrl": "http://seq",
     "ApiKey": "1234567890",
     "MinimumLevel": "Information",
     "LevelOverride": {
-      "Microsoft": "Warning"
     }
   }
 }
