--- a/benchmarks/RemoteBenchmark/Node2/Node2.csproj
+++ b/benchmarks/RemoteBenchmark/Node2/Node2.csproj
@@ -10,4 +10,7 @@
     <ProjectReference Include="..\..\..\src\Proto.Remote.GrpcNet\Proto.Remote.GrpcNet.csproj" />
     <ProjectReference Include="..\Messages\Messages.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.7" />
+  </ItemGroup>
 </Project>
