--- a/benchmarks/RemoteBenchmark/Messages/Messages.csproj
+++ b/benchmarks/RemoteBenchmark/Messages/Messages.csproj
@@ -5,12 +5,12 @@
   <ItemGroup>
     <PackageReference Include="Google.Protobuf" Version="3.13.0" />
     <PackageReference Include="System.ValueTuple" Version="4.5.0" />
-    <PackageReference Include="Grpc.Tools" Version="2.31.0" PrivateAssets="All" />
+    <PackageReference Include="Grpc.Tools" Version="2.32.0" PrivateAssets="All" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\Proto.Actor\Proto.Actor.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <Protobuf Include="Protos.proto" GrpcServices="Server" ProtoRoot=".; ..\..\..\src" />
+    <Protobuf Include="Protos.proto" GrpcServices="Server" AdditionalImportDirs=".; ..\..\..\src" />
   </ItemGroup>
 </Project>
