--- a/examples/Chat/Messages/Chat.Messages.csproj
+++ b/examples/Chat/Messages/Chat.Messages.csproj
@@ -3,12 +3,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Grpc.Tools" Version="2.31.0" PrivateAssets="All" />
+    <PackageReference Include="Grpc.Tools" Version="2.32.0" PrivateAssets="All" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\Proto.Actor\Proto.Actor.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <Protobuf Include="Chat.proto" GrpcServices="Server" ProtoRoot=".; ..\..\..\src" />
+    <Protobuf Include="Chat.proto" GrpcServices="Server" AdditionalImportDirs=".; ..\..\..\src" />
   </ItemGroup>
 </Project>
