--- a/src/Proto.Remote/Proto.Remote.csproj
+++ b/src/Proto.Remote/Proto.Remote.csproj
@@ -5,16 +5,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Grpc.Core.Api" Version="2.31.0" />
-    <PackageReference Include="Grpc.HealthCheck" Version="2.31.0" />
-    <PackageReference Include="Grpc.Tools" Version="2.31.0" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.7" />
+    <PackageReference Include="Grpc.Core.Api" Version="2.32.0" />
+    <PackageReference Include="Grpc.HealthCheck" Version="2.32.0" />
+    <PackageReference Include="Grpc.Tools" Version="2.32.0" PrivateAssets="All" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Proto.Actor\Proto.Actor.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <Protobuf Include="Protos.proto" GrpcServices="Client;Server" ProtoRoot=".; ..\..\src" />
+    <Protobuf Include="Protos.proto" GrpcServices="Client;Server" AdditionalImportDirs =".; ..\..\src" />
     <None Remove="HealthCheck.proto" />
   </ItemGroup>
 </Project>
