--- a/tests/Proto.Remote.Tests.Messages/Proto.Remote.Tests.Messages.csproj
+++ b/tests/Proto.Remote.Tests.Messages/Proto.Remote.Tests.Messages.csproj
@@ -4,7 +4,7 @@
     <IsTestProject>false</IsTestProject>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Grpc.Tools" Version="2.31.0" PrivateAssets="All"/>
+    <PackageReference Include="Grpc.Tools" Version="2.32.0" PrivateAssets="All"/>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Remove="AutoFixture.Xunit2"/>
@@ -17,6 +17,6 @@
     <ProjectReference Include="..\..\src\Proto.Actor\Proto.Actor.csproj"/>
   </ItemGroup>
   <ItemGroup>
-    <Protobuf Include="Protos.proto" GrpcServices="Server" ProtoRoot=".; ..\..\src"/>
+    <Protobuf Include="Protos.proto" GrpcServices="Server" AdditionalImportDirs=".; ..\..\src"/>
   </ItemGroup>
 </Project>
