--- a/tests/Proto.Cluster.MongoIdentityLookup.Tests/Proto.Cluster.MongoIdentityLookup.Tests.csproj
+++ b/tests/Proto.Cluster.MongoIdentityLookup.Tests/Proto.Cluster.MongoIdentityLookup.Tests.csproj
@@ -5,13 +5,15 @@
 
     <ItemGroup>
         <PackageReference Include="Divergic.Logging.Xunit" Version="3.1.0" />
-        <PackageReference Include="Grpc.Tools" Version="2.23.0" PrivateAssets="All" />
+        <PackageReference Include="Grpc.Tools" Version="2.32.0" PrivateAssets="All" />
         <PackageReference Include="MongoDB.Driver" Version="2.10.4" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.8" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\..\src\Proto.Cluster.Consul\Proto.Cluster.Consul.csproj" />
         <ProjectReference Include="..\..\src\Proto.Cluster.MongoIdentityLookup\Proto.Cluster.MongoIdentityLookup.csproj" />
         <ProjectReference Include="..\..\src\Proto.Cluster\Proto.Cluster.csproj" />
+        <ProjectReference Include="..\..\src\Proto.Remote.Grpc\Proto.Remote.Grpc.csproj" />
     </ItemGroup>
     
     <ItemGroup>
