--- a/tests/Proto.Remote.Tests.Messages/Proto.Remote.Tests.Messages.csproj
+++ b/tests/Proto.Remote.Tests.Messages/Proto.Remote.Tests.Messages.csproj
@@ -17,6 +17,6 @@
     <ProjectReference Include="..\..\src\Proto.Actor\Proto.Actor.csproj"/>
   </ItemGroup>
   <ItemGroup>
-    <Protobuf Include="Protos.proto" GrpcServices="Server" ProtoRoot=".; ..\..\src"/>
+    <Protobuf Include="Protos.proto" GrpcServices="Server" AdditionalImportDirs=".; ..\..\src"/>
   </ItemGroup>
 </Project>
